Oerflow fix and JS Jump statements

--- a/index.css
+++ b/index.css
@@ -126,6 +126,10 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease, font-size 0.3s ease;    
     opacity: 0.9;
+    /* for handling text overflow */
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 .topicCard:hover{
     transform: translateY(-6px); 
